# series-control

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/: main.py  repl.py
src/commands/: __init__.py  add_more_seasons.py  add_season.py  compare_series.py  eliminate_serie.py  new_serie.py  put_ratings_episodes.py  rate_all.py  see_episodes_rating.py  see_series.py  set_api_key.py
src/db/: storage.py
src/helpers/: ombd_api_helpers.py  table_helpers.py  utils.py
